--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body>
+<body style="background-color: #fbfbfb;" >
 <div>&nbsp;</div>
 <div>&nbsp;</div>
 <div>&nbsp;</div>
@@ -28,7 +28,7 @@
 <tr>
 <!--No campo "meubanner.jpg" digite o nome da sua imagem e sua extensão (jpg, gif, png, etc..)
 caso a imagem esteja dentro de uma subpasta em sua hospedagem, digite entre as aspas"", o nome da subpasta, exemplo: src="../subpasta/meubanner.jpg"-->
-<td align="center"><img style="width:40%;" src="./img/logotipo.png" /></td>
+<td align="center"><img style="width:40%;" src="./img/loading.gif" /></td>
 </tr>
 <tr>
 <!--Caso queira disponibilizar seu "Email", no campo "Meu Email" digite seu email de contato, ou apague a frase "Meu Email"-->
