--- a/Beneficios.html
+++ b/Beneficios.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="beneficios.html">Beneficios</a>
+          <a class="nav-link" href="beneficios.html">Benefícios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="doadores.html">Doadores</a>
