--- a/doadores.html
+++ b/doadores.html
@@ -195,7 +195,7 @@
 <!--      </button>-->
 <!--    </div>-->
 <!--  </form>-->
-  <div class="form-group row">
+<!--   <div class="form-group row">
     <div class="col-sm-2">Checkbox</div>
     <div class="col-sm-10">
       <div class="form-check">
@@ -205,10 +205,10 @@
         </label>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="form-group row">
     <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary">Enviar</button>
     </div>
   </div>
 </form>
