--- a/voluntarios.html
+++ b/voluntarios.html
@@ -80,28 +80,30 @@
   </div>
 </nav>
 
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<table align="center" border="0">
-  <tr>
-    <td align="center"><img style="width:40%;" src="./img/loading.gif" /></td>
-  </tr>
-  <tr>
-    <td align="center"><b>soul.caridosa@outlook.com</b></td>
-  </tr>
-  <tr>
-    <td align="center"><b>11 98620-5777</b></td>
-  </tr>
-  <tr>
-    <td align="center"><b>Em Construção...</b></td>
-  </tr>
-</table>
-
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-
+<form class="forms">
+  <div class="form-group row">
+    <label for="inputName3" class="col-sm-2 col-form-label">Nome</label>
+    <div class="col-sm-10">
+      <input type="name" class="form-control" id="inputName3" placeholder="Seu Nome">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputAddress3" class="col-sm-2 col-form-label">Endereço</label>
+    <div class="col-sm-10">
+      <input type="address" class="form-control" id="inputAddress3" placeholder="Seu Endereço">
+    </div>
+  </div>
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label" for="inputPhone">Telefone de contato</label>
+      <div class="col-sm-3">
+      <input type="phone" name="telefone" class="form-control" id="inputPhone" placeholder="Ex. (11) 98620-5777">
+      </div>
+    </div>
+        <div class="form-group col-md-12">
+          <label class="title1">Descrição do Problema</label>
+          <textarea id="inputMsg" type="text" name="mensagem" class="form-control mensagem" required=""></textarea>
+        </div>
+  
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
