--- a/voluntarios.html
+++ b/voluntarios.html
@@ -103,7 +103,11 @@
           <label class="title1">Descrição do Problema</label>
           <textarea id="inputMsg" type="text" name="mensagem" class="form-control mensagem" required=""></textarea>
         </div>
-  
+  <div class="form-group row">
+    <div class="col-sm-10">
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
+  </div>
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
